# JobDataViz

./: .env.example  .replit  Dockerfile  README.md  app.py  app_old.py  auth.py  cookies.txt  data_processor.py  docker-compose.yml  flask_app.py  forms.py  init.sql  main.py  migrate_user_model.py  models.py  nginx.conf  pyproject.toml  replit.md  visualizations.py
assets/: custom.css
attached_assets/: Pasted-Analiza-Umiej-tno-ci-Tab-1-Wykres-s-upkowy-najpopularniejszych-umiej-tno-ci-Top-20-najcz-ciej-w-1757124703251_1757124703253.txt
templates/: admin.html  base.html  login.html  register.html
